mux-compiler/tests/snapshots/executable_integration__executable_integration__float_display.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
6.0
-3.0
10.5
[6.0, 10.5, 0.0, -3.0]
{whole: 1.0, part: 0.25}
{2.0}
(1.0, 2.5)
Some(4.0)
Ok(7.0)
[[1.0], [2.0, 3.5]]
