mux-compiler/tests/snapshots/executable_integration__executable_integration__for_over_any_list.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
ana
bo
0
2
4
r0
r1
[0, 1, 2, 3]
4
