mux-compiler/tests/snapshots/executable_integration__executable_integration__forward_ref.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
true
true
false
false
