mux-compiler/tests/snapshots/executable_integration__executable_integration__functions.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
add(3,4): 7
Hello World
Hello World
Hello Alice
Hello world
Hello Mux
Hi friend!
Hello Bob!
Hey Charlie?
calculate(1): 111
calculate(1, 5): 106
calculate(1, 5, 50): 56
square(5): 25
doubled(3.5): 7.0
