mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_arity_field_default.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 1 error found

error[E0303]: Generic type 'Box' requires 1 type argument(s), got 2
--> test_scripts/error_cases/generic_arity_field_default.mux:7:13
   |
 7 |     int x = Box<int, string>.new().value
   |             ^^^^^^^^^^^^^^^^
   |
= help: Provide exactly 1 type argument in angle brackets, e.g. Box<T>
