mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_arity_interface_ref.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: 1 error found

error[E0310]: Generic type 'Wrapper' requires 1 type argument(s), got 2
--> test_scripts/error_cases/generic_arity_interface_ref.mux:7:12
   |
 7 | class C is Wrapper<int, string> {
   |            ^^^^^^^
   |
= help: Provide exactly 1 type argument in angle brackets, e.g. Wrapper<T>
