mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_bounds.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
true
true
true
true
true
true
true
5
2
