mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_class_capabilities.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
labelled
labelled
labelled
7
x
pair
pair
pair
