mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_class_layout.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
int slot: 42 count 1
int field: 42
float slot: 2.5 count 2
float field: 2.5
bool slot: true count 3
bool field: true
string slot: hello count 4
string field: hello
bumped count: 2
pair: 7 seven
swapped: seven 7
color slot: green
color field is green: true
color field is red: false
color field: bound green
color field: direct green
tagged: green
tagged: blue
tagged: red
list slot: [4, 5, 6]
list field size: 3
source after copy write: 10 7
copy after copy write: 99 70
source text after copy write: original
copy text after copy write: changed
nested: 11
entry: 1 count 10
entry: 2 count 20
entry: 3 count 30
list length: 3
=== generic class layout done ===
