mux-compiler/tests/snapshots/executable_integration__executable_integration__generic_classes.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
Box with: hello
test : value
Generic class test completed
